Update and rename intro.html to index.html

--- a/4/index.html
+++ b/4/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>작은 거인님 4주년</title>
+    <title>작은 거인님, 07월 29일, 4주년을 축하해요.</title>
     <style>
       @font-face {
         font-family: 'NanumSquare';
